--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -225,11 +225,11 @@
 .page3{
 
   background-image: url('../img/content/background3.png');
-  justify-content: start;
+  justify-content: center;
   align-items: center;
 
   .text{
-    margin-top: 170px;
+    margin-top: 25px;
     margin-left: 90px;
 
     h1{
