--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -10,7 +10,7 @@
 
   background-color: $color-brilliant-rose;
   border: none;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: $color-transparent;
   -webkit-tap-highlight-color: transparent;
 
   border-radius: 40px;
@@ -26,13 +26,14 @@
     justify-content: center;
     align-items: center;
     margin-right: 20px;
-    box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+    box-shadow: -2px -3px 4px 1px rgba(8, 2, 7, 0.5), 2px 2px 4px #ead6ec;
   }
   span{
     font-size: 22px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     line-height: 40px;
-    font-family: "DINPro-Medium";
+    font-weight: 600;
+    font-family: "DINPro-Light";
     padding-right: 20px;
   }
 }
