--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,7 +5,6 @@ $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 // Project palette
-// https://www.htmlcsscolor.com/hex/334482
 
 $color-summer-sky:                  #3DC1FD;
 $color-anakiwa:                     #8CC9E8;
@@ -14,9 +13,9 @@ $color-mulberry:                    #cf578d;
 
 // Typography
 
-$fz-default:                        16px;
+$fz-default:                        20px;
 
-$ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+$ff-dinpro:                        "DINPro-Light";
 
 // Animation
 
